--- a/CardioDataViewer/AndroidManifest.xml
+++ b/CardioDataViewer/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".SinusDisplayActivity"
+            android:name="at.ac.tuwien.e0826357.cardioDataViewer.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
