--- a/wearablesimulator/build.gradle
+++ b/wearablesimulator/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'resources', include: ['*.*'])
 }
 
 sourceCompatibility = "1.7"
