--- a/wearablesimulator/build.gradle
+++ b/wearablesimulator/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile fileTree(dir: 'resources', include: ['*.*'])
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.7'
 }
 
 sourceCompatibility = "1.7"
