--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2016 Florian Pollak (fpdevelop@gmail.com)
   ~
   ~  Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,8 +12,7 @@
   ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~  See the License for the specific language governing permissions and
   ~  limitations under the License.
-  -->
-
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="at.ac.tuwien.e0826357.cardioapp">
 
@@ -25,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="at.ac.tuwien.e0826357.cardioapp.application.MainActivity"
+            android:name=".application.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
@@ -43,6 +41,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="at.ac.tuwien.e0826357.cardioapp.application.MainActivity" />
         </activity>
+        <activity
+            android:name=".application.TestActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_test"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
